--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "del": "^3.0.0",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
+    "gulp-git": "^2.5.0",
     "gulp-htmlclean": "^2.7.16",
     "gulp-inject": "^4.3.0",
     "gulp-uglify": "^3.0.0"
