--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "gulp-concat": "^2.6.1",
     "gulp-git": "^2.5.0",
     "gulp-htmlclean": "^2.7.16",
+    "gulp-imagemin": "^4.0.0",
     "gulp-inject": "^4.3.0",
     "gulp-prompt": "^1.0.1",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "imagemin-giflossy": "^5.1.10",
+    "imagemin-mozjpeg": "^7.0.0",
+    "imagemin-pngquant": "^5.0.1",
+    "imagemin-zopfli": "^5.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
